# simple-notepad-project-sa

./: CMakeLists.txt  Notepad.md  find_replace_dialog.ui  line_number_area.h  main_window.cpp  main_window.h  notepad_exception.h  sort.h  spell_checker.h  spell_checker_highlighter.h  test_exceptions.cpp  word_frequency_dialog.ui
